--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">אפליקציה לחיפוש עבודה</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">כניסה</string>
+    <string name="title_activity_login">אפליקציה לחיפוש עבודה</string>
     <string name="title_activity_profile">הפרופיל שלי</string>
 
     <!-- Strings related to login -->
